# trading-dashboard

./: .gitignore  Cargo.toml  README.md  test_websocket.sh
src/: app.rs  data_structures.rs  main.rs  state.rs
src/api/: mod.rs  zerodha_client.rs
src/ui/: logs.rs  mod.rs  orders.rs  overview.rs  pnl.rs  positions.rs
src/ui/components/: mod.rs  modal.rs  styled_button.rs
src/workers/: api_handler.rs  mod.rs  websocket_handler.rs
