[package]
name = "trading_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework - High-performance immediate mode GUI
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use glow renering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Async Runtime - Ultra-low latency async runtime
tokio = { version = "1.0", features = ["full"] }

# High-performance concurrency primitives
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Lock-free concurrent hash maps for ultra-low latency
dashmap = "6.0"

# High-performance synchronization primitives
parking_lot = "0.12"

# Zero-copy serialization for WebSocket tick data
rkyv = "0.8.10"

# Standard serialization for REST API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration management
figment = { version = "0.10", features = ["toml"] }

# HTTP client for REST API calls
reqwest = { version = "0.12", features = ["json"] }

# WebSocket client
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tungstenite = "0.27.0"

# URL construction
url = "2.0"

# Logging for debugging
log = "0.4"
env_logger = "0.11"

# Additional utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "rkyv-64"] }
fastrand = "2.0"
futures-util = "0.3"
hex = "0.4"
sha2 = "0.10"
toml = "0.9.2"

# Binary targets for authentication helper
[[bin]]
name = "auth_helper"
path = "src/bin/auth_helper.rs"
